Fix SAT passages in Safari <= 8
Summary:
Asana task:
https://app.asana.com/0/27216215224639/166366570872079

We depend on some flexbox properties to make passages work correctly. In
older versions of safari, we need to prefix some of the properties in
order to get things working. I'm actually not sure if we support Safari
8, but it's pretty recent and this is really easy so w/e.

Test Plan:
 - `make build/perseus.css`
 - Open http://localhost:8081/mission/sat in a safari 8 browserstack.
 - Open a passage question, see that the passage looks correct instead
   of overlapping itself: {F550600}

Reviewers: amy, mattdunnrankin

Reviewed By: mattdunnrankin

Subscribers: jared

Differential Revision: https://phabricator.khanacademy.org/D29880

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -879,6 +879,12 @@
             }
 
             .perseus-column {
+                // NOTE(emily): For some reason, these prefixes aren't being
+                // added by our auto-prefixer, and we need these prefixes to
+                // work in Safari <= 8.
+                display: -webkit-inline-flex;
+                -webkit-flex-direction: column;
+
                 display: inline-flex;
                 flex-direction: column;
                 vertical-align: top;
